--- a/public/css/planets.css
+++ b/public/css/planets.css
@@ -16,6 +16,11 @@
 .planet__image {
     flex: 0.5;
     text-align: center;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-height: 680px;
+    box-sizing: border-box;
 }
 
 .planet__info-wrapper {
@@ -77,6 +82,7 @@
     gap: 3rem;
     width: 107rem;
     margin: 4.7rem 5.6rem;
+    max-height: 12.8rem;
 }
 
 .planet .add-info__rotation,
@@ -105,6 +111,6 @@
 .add-info__radius > p,
 .add-info__temp > p {
     font-family: 'Antonio', sans-serif;
-    font-size: 4rem;
+    font-size: 3.8rem;
     letter-spacing: -1.5px;
 }
