--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,7 +1,16 @@
 :root {
-    --darkBlue: hsl(240, 67%, 8%);
     --white: hsl(0, 0%, 100%);
+    --darkBlue: hsl(240, 67%, 8%);
+    --darkGrey: hsl(240, 17%, 26%);
     --lightGray: hsl(240, 6%, 54%);
+    --mercuryTeal: hsl(194, 48%, 49%);
+    --venusOrange: hsl(33, 82%, 61%);
+    --earthPurple: hsl(263, 67%, 51%);
+    --marsRed: hsl(10, 63%, 51%);
+    --jupiterRed: hsl(2, 68%, 53%);
+    --saturnBrown: hsl(17, 73%, 46%);
+    --uranusGreen: hsl(169°, 73%, 44%);
+    --neptunBlue: hsl(222, 87%, 56%);
 }
 
 * {
@@ -32,17 +41,6 @@ body {
     text-transform: uppercase;
 }
 
-@media only screen and (max-width: 768px) {
-    .navbar__ul {
-        display: none;
-    }
-
-    .navbar__hamburger {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
 .navbar__ul {
     display: flex;
 }
@@ -64,6 +62,24 @@ body {
 
 .navbar__hamburger {
     display: none;
+}
+
+@media only screen and (min-width: 768px) {
+    .navbar {
+        flex-direction: column;
+    }
+
+    .navbar__ul {
+        margin-top: 3.9rem;
+        margin-bottom: 1rem;
+
+        padding-inline-start: 0;
+    }
+
+    .navbar__li-item {
+        margin: 0 2.25rem;
+        font-size: 1.1rem;
+    }
 }
 
 .navbar__hamburger > span {
