--- a/public/css/planets.css
+++ b/public/css/planets.css
@@ -13,14 +13,19 @@
     margin: 21.4rem auto;
 }
 
-.planet__image {
+.planet__image-container {
     flex: 0.5;
     text-align: center;
-    width: 100%;
+    width: 90%;
     height: auto;
     object-fit: cover;
     max-height: 680px;
     box-sizing: border-box;
+}
+
+.planet__image {
+    max-height: 550px;
+    width: auto;
 }
 
 .planet__info-wrapper {
@@ -113,4 +118,92 @@
     font-family: 'Antonio', sans-serif;
     font-size: 3.8rem;
     letter-spacing: -1.5px;
+}
+
+@media only screen and (max-width: 768px) {
+    .planet {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: auto;
+        justify-content: normal;
+    }
+
+    .planet__name {
+        font-size: 4.8rem;
+    }
+
+    .planet__image-container {
+        margin-bottom: 3rem;
+    }
+
+    .planet__image {
+        max-height: 320px;
+    }
+
+    .planet__info {
+        font-size: 1.1rem;
+    }
+
+    .planet__source {
+        font-size: 1.2rem;
+    }
+
+    .planet__links-container {
+        font-size: 0.9rem;
+    }
+
+    .planet__info-wrapper {
+        display: flex;
+        max-width: 100%;
+        align-items: center;
+        gap: 6.9rem;
+    }
+
+    .planet__text-wrapper {
+        width: 33.9rem;
+    }
+
+    .planet__buttons {
+        width: 28.1rem;
+        height: 4rem;
+        display: flex;
+        align-items: center;
+        padding: 0;
+    }
+
+    .planet__add-info {
+        width: auto;
+        gap: 1.1rem;
+        margin: 2.7rem 4rem;
+    }
+
+    .planet .add-info__rotation,
+    .planet .add-info__evolution,
+    .planet .add-info__radius,
+    .planet .add-info__temp {
+        width: 16.4rem;
+        height: 8.8rem;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .add-info__rotation > p,
+    .add-info__evolution > p,
+    .add-info__radius > p,
+    .add-info__temp > p {
+        font-size: 2.4rem;
+        margin-top: 0.3rem;
+        margin-left: 1rem;
+    }
+
+    .add-info__rotation > span,
+    .add-info__evolution > span,
+    .add-info__radius > span,
+    .add-info__temp > span {
+        font-size: 0.8rem;
+        margin-bottom: 0.3rem;
+        margin-left: 1rem;
+    }
 }
