ADDED: mobile view without menu

--- a/views/planet.ejs
+++ b/views/planet.ejs
@@ -1,5 +1,22 @@
 <%- include ('header') -%>
 <main class="main">
+    <div class="main__mobile-menu">
+        <div class="overview-wrapper">
+            <div class="overview">
+                Overview
+            </div>
+        </div>
+        <div class="structure-wrapper">
+            <div class="overview">
+                Structure
+            </div>
+        </div>
+        <div class="surface-wrapper">
+            <div class="overview">
+                Surface
+            </div>
+        </div>
+    </div>
     <section class="planet">
         <div class="planet__image-container">
             <img class="planet__image" src=<%= planets[strippedURL].images.planet %> alt="mercury">
