--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -64,7 +64,7 @@ body {
     display: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
     }
@@ -87,4 +87,19 @@ body {
     margin: 0.2rem;
     min-width: 2.4rem;
     min-height: 3px;
+}
+
+@media only screen and (max-width: 375px) {
+    .navbar {
+        flex-direction: row;
+    }
+
+    .navbar__ul {
+        display: none;
+    }
+
+    .navbar__hamburger {
+        display: flex;
+        flex-direction: column;
+    }
 }
