--- a/public/css/planets.css
+++ b/public/css/planets.css
@@ -3,6 +3,10 @@
     display: grid;
     place-content: center;
 }
+
+.main__mobile-menu {
+    display: none;
+}
 .planet {
     display: flex;
     flex-wrap: wrap;
@@ -205,5 +209,95 @@
         font-size: 0.8rem;
         margin-bottom: 0.3rem;
         margin-left: 1rem;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .main {
+        display: block;
+    }
+
+    .main__mobile-menu {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        border-bottom: 1px solid #979797;
+    }
+
+    .main__mobile-menu > .overview-wrapper,
+    .main__mobile-menu > .structure-wrapper,
+    .main__mobile-menu > .surface-wrapper {
+        font-size: 0.9rem;
+        letter-spacing: 1.93px;
+        text-transform: uppercase;
+        font-family: 'Spartan', sans-serif;
+        height: 4.6rem;
+        border-block-end: 3px solid green;
+        width: 8rem;
+        text-align: center;
+    }
+
+    .overview,
+    .structure,
+    .surface {
+        margin-top: 2rem;
+        width: 8rem;
+    }
+
+    .planet {
+        margin: 0;
+        margin-top: 10rem;
+        height: auto;
+    }
+
+    .planet__image-container {
+        margin-bottom: 5rem;
+    }
+
+    .planet__image {
+        max-height: 220px;
+    }
+
+    .planet__text-wrapper {
+        text-align: center;
+    }
+
+    .planet__add-info {
+        flex-direction: column;
+        max-height: 100%;
+    }
+
+    .planet__links-container {
+        display: none;
+    }
+
+    .planet .add-info__rotation,
+    .planet .add-info__evolution,
+    .planet .add-info__radius,
+    .planet .add-info__temp {
+        width: 32.7rem;
+        height: 4.8rem;
+        padding: 0.5rem 0.5rem;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .add-info__rotation > p,
+    .add-info__evolution > p,
+    .add-info__radius > p,
+    .add-info__temp > p {
+        font-size: 2rem;
+        margin-top: 0;
+        margin-right: 2rem;
+    }
+
+    .add-info__rotation > span,
+    .add-info__evolution > span,
+    .add-info__radius > span,
+    .add-info__temp > span {
+        font-size: 0.8rem;
+        margin-bottom: 0;
+        margin-left: 2rem;
     }
 }
