--- a/views/planet.ejs
+++ b/views/planet.ejs
@@ -7,12 +7,12 @@
             </div>
         </div>
         <div class="structure-wrapper">
-            <div class="overview">
+            <div class="structure">
                 Structure
             </div>
         </div>
         <div class="surface-wrapper">
-            <div class="overview">
+            <div class="surface">
                 Surface
             </div>
         </div>
@@ -31,15 +31,16 @@
             <div class="planet__links-container">
                 <div class="planet__buttons">
                     <span class="planet__buttons--number">01</span>
-                    <a class="planet__link" href=<%= planets.link %>>Overview</a>
+                    <a class="planet__link--overview" href=<%= planets.link %>>Overview</a>
                 </div>
                 <div class="planet__buttons">
                     <span class="planet__buttons--number">02</span>
-                    <a class="planet__link" href="/internal" onclick="showInternal">Internal structure</a>
+                    <a class="planet__link--internal" href="">Internal
+                        structure</a>
                 </div>
                 <div class="planet__buttons">
                     <span class="planet__buttons--number">03</span>
-                    <a class="planet__link" href="mercury-0/surface">Surface geology</a>
+                    <a class="planet__link--surface" href="mercury-0/surface">Surface geology</a>
                 </div>
             </div>
         </div>
