minor changes screen sizes

--- a/views/planet.ejs
+++ b/views/planet.ejs
@@ -35,7 +35,7 @@
                 </div>
                 <div class="planet__buttons">
                     <span class="planet__buttons--number">02</span>
-                    <a class="planet__link--internal" href="">Internal
+                    <a class="planet__link--internal" href="#">Internal
                         structure</a>
                 </div>
                 <div class="planet__buttons">
