ADDED: route to display geology facts

--- a/views/planet.ejs
+++ b/views/planet.ejs
@@ -23,7 +23,7 @@
                 <%= planets[strippedId].images.planet %> alt=<%= planets[strippedId].name %>>
                 <% } else if (urlString === planets[strippedId].link.structure) { %>
                     <%= planets[strippedId].images.internal %>
-                    <% } else if (urlString === planet[strippedId].link.geology) { %>
+                    <% } else if (urlString === planets[strippedId].link.geology) { %>
                         <%= planets[strippedId].images.geology %>
                         <% } %>
         </div>
